# glowshell

./: .gitignore  README.md  package-lock.json  package.json
src/: index.html  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
